--- a/setup.cfg
+++ b/setup.cfg
@@ -23,5 +23,5 @@ max-line-length = 96
 per-file-ignores =
     # ignore line length in tests
     */tests/*:E501
-    # ignore unused import in utils.py
+    # ignore unused import in __init__.py
     */__init__.py:F401
