--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pytest = "^4.6"
 pytest-flake8 = "^1.0"
 pytest-asyncio = "^0.10.0"
 pytest-mypy = "^0.3.3"
+mkdocs = "^1.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
