--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,14 @@ repository = "https://github.com/berislavlopac/pyotr"
 python = "^3.7"
 openapi-core = "^0.11.0"
 pyyaml = "^5.1"
-starlette = "^0.12.1"
 stringcase = "^1.2"
 http3 = "^0.6.3"
-requests = "^2.22"
 pytest-cov = "^2.7"
 typing-extensions = "^3.7"
-uvicorn = {version = "^0.8.3", optional = true}
+uvicorn = "^0.9.0"
 mkdocs = "^1.0"
 httpx = "^0.7.2"
+starlette = "^0.12.9"
 
 [tool.poetry.extras]
 uvicorn = ["uvicorn"]
@@ -31,6 +30,7 @@ pytest-flake8 = "^1.0"
 pytest-asyncio = "^0.10.0"
 pytest-mypy = "^0.3.3"
 mkdocs = "^1.0"
+requests = "^2.22"
 
 [build-system]
 requires = ["poetry>=0.12"]
