add support for defining endpoints as modules
also testing setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,18 +5,19 @@ markers =
 
 [coverage:run]
 source =
-    src/
+    src/pyotr/
 omit =
     */tests/*
     src/tests/*
 
 [coverage:report]
-;skip_covered = true
+skip_covered = true
 show_missing = true
 fail_under = 90
 
 [mypy]
 mypy_path = src/
+ignore_missing_imports = true
 
 [flake8]
 max-line-length = 96
