--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ repository = "https://github.com/berislavlopac/pyotr"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-openapi-core = "^0.12.0"
 pyyaml = "^5.1"
 stringcase = "^1.2"
 http3 = "^0.6.3"
@@ -20,6 +19,8 @@ uvicorn = "^0.9.0"
 mkdocs = "^1.0"
 httpx = "^0.7.2"
 starlette = "^0.13"
+openapi-core = "^0.13.1"
+werkzeug = "^1.0.0"
 
 [tool.poetry.extras]
 uvicorn = ["uvicorn"]
