--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,12 @@ pytest-mypy = "^0.4.2"
 requests = "^2.22"
 pytest = "^5.2"
 
+[tool.black]
+line-length = 120
+target-version = ['py38']
+verbose = true
+skip-string-normalization = false
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
