--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pytest-flake8 = "^1.0"
 pytest-mypy = "^0.4.2"
 requests = "^2.22"
 pytest = "^5.2"
+mypy_extensions = "^0.4.3"
 
 [tool.black]
 line-length = 120
