--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,13 +8,21 @@ blocks:
   - name: Test
     task:
       jobs:
-        - name: pytest
+        - name: flake8
           commands:
             - sem-version python 3.7
             - checkout
-            - python -m pip install --upgrade pip
-            - curl -sSLo $HOME/get-poetry.py https://raw.githubusercontent.com/sdispater/poetry/master/get-poetry.py
-            - python $HOME/get-poetry.py --preview --yes
-            - source $HOME/.poetry/env
-            - poetry install --no-root
-            - python -m pytest --cov --flake8 --mypy --mypy-ignore-missing-imports --cache-clear
+            - python -m pip install -U pip tox
+            - python -m tox -e flake8
+        - name: py37
+          commands:
+            - sem-version python 3.7
+            - checkout
+            - python -m pip install -U pip tox
+            - python -m tox -e py37
+        - name: py38
+          commands:
+            - sem-version python 3.8
+            - checkout
+            - python -m pip install -U pip tox
+            - python -m tox -e py38
