--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,9 @@ repository = "https://github.com/berislavlopac/pyotr"
 python = "^3.7"
 pyyaml = "^5.1"
 stringcase = "^1.2"
-http3 = "^0.6.3"
 typing-extensions = "^3.7"
-uvicorn = "^0.9.0"
-httpx = "^0.7.2"
+uvicorn = "^0.12"
+httpx = "^0.15"
 starlette = "^0.13"
 openapi-core = "^0.13.1"
 werkzeug = "^1.0.0"
@@ -25,19 +24,29 @@ uvicorn = ["uvicorn"]
 
 [tool.poetry.dev-dependencies]
 mkdocs = "^1.0"
-pytest-asyncio = "^0.10.0"
+pytest-asyncio = "^0.14"
 pytest-cov = "^2.7"
 pytest-flake8 = "^1.0"
-pytest-mypy = "^0.4.2"
+pytest-mypy = "^0.7"
 requests = "^2.22"
-pytest = "^5.2"
+pytest = "^6.0"
 mypy_extensions = "^0.4.3"
 
 [tool.black]
-line-length = 120
-target-version = ['py38']
-verbose = true
+line-length = 96
+target-version = ['py38', 'py38']
+verbose = false
 skip-string-normalization = false
+
+[tool.coverage.run]
+source = [ "src/pyotr/", ]
+omit = [ "*/tests/*", "src/tests/*", ]
+
+[tool.coverage.report]
+skip_covered = true
+show_missing = true
+fail_under = 90
+exclude_lines = [ "pragma: no cover", "@abstract",]
 
 [build-system]
 requires = ["poetry>=0.12"]
