--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,23 @@
 [tox]
 isolated_build = true
-envlist = flake8, py37, py38, py39
+envlist = checks, py38, py39
 
 [testenv]
-deps = poetry
+deps =
+    poetry
+    pytest-cov
 commands =
-    poetry install -q
-    poetry run pytest --mypy --cov
+    poetry install --quiet --no-root
+    poetry run pytest --cov
+    pip install -U pip
+    mypy --install-types --non-interactive src/
 
-[testenv:flake8]
-deps = flake8
-commands = flake8
+[testenv:checks]
+deps =
+    flake8
+    black
+    pydocstyle
+commands =
+    flake8
+    black --check src/
+    pydocstyle src/
