--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -8,12 +8,12 @@ blocks:
   - name: Test
     task:
       jobs:
-        - name: flake8
+        - name: checks
           commands:
             - sem-version python 3.8
             - checkout
             - python -m pip install -U pip tox
-            - python -m tox -e flake8
+            - python -m tox -e checks
         - name: py38
           commands:
             - sem-version python 3.8
