--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,13 @@ isolated_build = true
 envlist = checks, py38, py39
 
 [testenv]
+skip_install = true
 deps =
     poetry
     pytest-cov
+    mypy
 commands =
-    poetry install --quiet --no-root
-    poetry run pytest --cov
-    pip install -U pip
+    pytest --cov
     mypy --install-types --non-interactive src/
 
 [testenv:checks]
