--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "pyotr"
-version = "0.7.1"
+version = "0.7.2"
 description = "Python OpenAPI-to-REST (and back) framework "
 authors = ["Berislav Lopac <berislav@lopac.net>"]
 license = "MIT"
@@ -15,7 +15,7 @@ stringcase = "^1.2.0"
 typing-extensions = "^4.1.1"
 uvicorn = "^0.17.6"
 httpx = "^0.22.0"
-starlette = "^0.19.0"
+starlette = ">=0.14,<1.0"
 openapi-core = "^0.13.1"
 Werkzeug = "^2.0.3"
 
